kubernetes/main/apps/longhorn-system/longhorn/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  labels:
    app.kubernetes.io/name: longhorn-ui
spec:
  hostnames:
    - longhorn.schwarz47.at
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: network
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: longhorn-frontend
          namespace: longhorn
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
